# test_ngsolve_binder

./: .gitmodules  README.md  apt.txt  cutfem.ipynb  environment.yml  min_dtn.ipynb  poisson.ipynb  postBuild  reac_coef.vtk  regpy.ipynb  start
min_dtn/: CMakeLists.txt  setup.py  test.py
min_dtn/src/: full.cpp  full.hpp
